// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`$include > Query 1`] = `
"
{
  "object": {
    "$include": true,
    "id": true
  }
}
--------------
{
  object @include(if: true) {
    id
  }
}
"
`;

exports[`$include > Query 2`] = `
"
{
  "object": {
    "$include": false,
    "id": true
  }
}
--------------
{
  object @include(if: false) {
    id
  }
}
"
`;

exports[`$include > Query 3`] = `
"
{
  "object": {
    "id": true
  }
}
--------------
{
  object {
    id
  }
}
"
`;

exports[`$include > Query 4`] = `
"
{
  "object": {
    "$include": {
      "if": true
    },
    "id": true
  }
}
--------------
{
  object @include(if: true) {
    id
  }
}
"
`;

exports[`$include > Query 5`] = `
"
{
  "object": {
    "$include": {
      "if": false
    },
    "id": true
  }
}
--------------
{
  object @include(if: false) {
    id
  }
}
"
`;

exports[`$include > Query 6`] = `
"
{
  "object": {
    "$include": {},
    "id": true
  }
}
--------------
{
  object @include(if: true) {
    id
  }
}
"
`;

exports[`$include > Query 7`] = `
"
{
  "object": {
    "$include": {},
    "id": true
  }
}
--------------
{
  object @include(if: true) {
    id
  }
}
"
`;

exports[`$skip > Query 1`] = `
"
{
  "object": {
    "$skip": true,
    "id": true
  }
}
--------------
{
  object @skip(if: true) {
    id
  }
}
"
`;

exports[`$skip > Query 2`] = `
"
{
  "object": {
    "$skip": false,
    "id": true
  }
}
--------------
{
  object @skip(if: false) {
    id
  }
}
"
`;

exports[`$skip > Query 3`] = `
"
{
  "object": {
    "id": true
  }
}
--------------
{
  object {
    id
  }
}
"
`;

exports[`$skip > Query 4`] = `
"
{
  "object": {
    "$skip": {
      "if": true
    },
    "id": true
  }
}
--------------
{
  object @skip(if: true) {
    id
  }
}
"
`;

exports[`$skip > Query 5`] = `
"
{
  "object": {
    "$skip": {
      "if": false
    },
    "id": true
  }
}
--------------
{
  object @skip(if: false) {
    id
  }
}
"
`;

exports[`$skip > Query 6`] = `
"
{
  "object": {
    "$skip": {},
    "id": true
  }
}
--------------
{
  object @skip(if: true) {
    id
  }
}
"
`;

exports[`$skip > Query 7`] = `
"
{
  "object": {
    "$skip": {},
    "id": true
  }
}
--------------
{
  object @skip(if: true) {
    id
  }
}
"
`;

exports[`alias > Query 1`] = `
"
{
  "id": [
    "x",
    true
  ]
}
--------------
{
  x: id
}
"
`;

exports[`alias > Query 2`] = `
"
{
  "id": [
    [
      "x",
      true
    ],
    [
      "id2",
      true
    ]
  ]
}
--------------
{
  x: id
  id2: id
}
"
`;

exports[`alias > Query 3`] = `
"
{
  "id": [
    "x",
    {
      "$skip": true
    }
  ]
}
--------------
{
  x: id @skip(if: true)
}
"
`;

exports[`alias > Query 4`] = `
"
{
  "object": [
    "x",
    {
      "$skip": true,
      "id": true
    }
  ]
}
--------------
{
  x: object @skip(if: true) {
    id
  }
}
"
`;

exports[`args > Query 1`] = `
"
{
  "stringWithArgs": {
    "$": {
      "boolean": true,
      "float": 1
    }
  }
}
--------------
{
  stringWithArgs(boolean: true, float: 1)
}
"
`;

exports[`args > Query 2`] = `
"
{
  "stringWithArgs": {
    "$": {}
  }
}
--------------
{
  stringWithArgs
}
"
`;

exports[`args > Query 3`] = `
"
{
  "objectWithArgs": {
    "$": {
      "id": ""
    },
    "id": true
  }
}
--------------
{
  objectWithArgs(id: "") {
    id
  }
}
"
`;

exports[`args > Query 4`] = `
"
{
  "objectWithArgs": {
    "$": {},
    "id": true
  }
}
--------------
{
  objectWithArgs {
    id
  }
}
"
`;

exports[`args > custom scalars > Query > arg field 1`] = `
"
{
  "dateArg": {
    "$": {
      "date": "1970-01-01T00:00:00.000Z"
    }
  }
}
--------------
{
  dateArg(date: "1970-01-01T00:00:00.000Z")
}
"
`;

exports[`args > custom scalars > Query > arg field in list (null) 1`] = `
"
{
  "dateArgList": {
    "$": {
      "date": null
    }
  }
}
--------------
{
  dateArgList(date: null)
}
"
`;

exports[`args > custom scalars > Query > arg field in list 1`] = `
"
{
  "dateArgList": {
    "$": {
      "date": [
        "1970-01-01T00:00:00.000Z",
        "1970-01-01T00:00:00.001Z"
      ]
    }
  }
}
--------------
{
  dateArgList(date: ["1970-01-01T00:00:00.000Z", "1970-01-01T00:00:00.001Z"])
}
"
`;

exports[`args > custom scalars > Query > arg field in non-null 1`] = `
"
{
  "dateArgNonNull": {
    "$": {
      "date": "1970-01-01T00:00:00.000Z"
    }
  }
}
--------------
{
  dateArgNonNull(date: "1970-01-01T00:00:00.000Z")
}
"
`;

exports[`args > custom scalars > Query > arg field in non-null list (with list) 1`] = `
"
{
  "dateArgNonNullList": {
    "$": {
      "date": [
        "1970-01-01T00:00:00.000Z",
        "1970-01-01T00:00:00.001Z"
      ]
    }
  }
}
--------------
{
  dateArgNonNullList(
    date: ["1970-01-01T00:00:00.000Z", "1970-01-01T00:00:00.001Z"]
  )
}
"
`;

exports[`args > custom scalars > Query > arg field in non-null list (with null) 1`] = `
"
{
  "dateArgNonNullList": {
    "$": {
      "date": [
        null,
        "1970-01-01T00:00:00.000Z"
      ]
    }
  }
}
--------------
{
  dateArgNonNullList(date: [null, "1970-01-01T00:00:00.000Z"])
}
"
`;

exports[`args > custom scalars > Query > arg field in non-null list non-null 1`] = `
"
{
  "dateArgNonNullListNonNull": {
    "$": {
      "date": [
        "1970-01-01T00:00:00.000Z",
        "1970-01-01T00:00:00.001Z"
      ]
    }
  }
}
--------------
{
  dateArgNonNullListNonNull(
    date: ["1970-01-01T00:00:00.000Z", "1970-01-01T00:00:00.001Z"]
  )
}
"
`;

exports[`args > custom scalars > Query > input object field 1`] = `
"
{
  "dateArgInputObject": {
    "$": {
      "input": {
        "idRequired": "",
        "dateRequired": "1970-01-01T00:00:00.000Z",
        "date": "1970-01-01T00:00:00.001Z"
      }
    }
  }
}
--------------
{
  dateArgInputObject(
    input: {idRequired: "", dateRequired: "1970-01-01T00:00:00.000Z", date: "1970-01-01T00:00:00.001Z"}
  )
}
"
`;

exports[`args > custom scalars > Query > nested input object field 1`] = `
"
{
  "InputObjectNested": {
    "$": {
      "input": {
        "InputObject": {
          "idRequired": "",
          "dateRequired": "1970-01-01T00:00:00.000Z",
          "date": "1970-01-01T00:00:00.001Z"
        }
      }
    }
  }
}
--------------
{
  InputObjectNested(
    input: {InputObject: {idRequired: "", dateRequired: "1970-01-01T00:00:00.000Z", date: "1970-01-01T00:00:00.001Z"}}
  )
}
"
`;

exports[`enum > Query 1`] = `
"
{
  "result": {
    "$": {
      "case": "Object1"
    },
    "__typename": true
  }
}
--------------
{
  result(case: Object1) {
    __typename
  }
}
"
`;

exports[`inline fragment field group > Query 1`] = `
"
{
  "___": {
    "__typename": true
  }
}
--------------
{
  ... {
    __typename
  }
}
"
`;

exports[`inline fragment field group > Query 2`] = `
"
{
  "___": [
    {
      "__typename": true
    },
    {
      "abcEnum": true
    }
  ]
}
--------------
{
  ... {
    __typename
  }
  ... {
    abcEnum
  }
}
"
`;

exports[`inline fragment field group > Query 3`] = `
"
{
  "interface": {
    "___": {
      "__typename": true
    }
  }
}
--------------
{
  interface {
    ... {
      __typename
    }
  }
}
"
`;

exports[`inline fragment field group > Query 4`] = `
"
{
  "unionFooBar": {
    "___": {
      "__typename": true
    }
  }
}
--------------
{
  unionFooBar {
    ... {
      __typename
    }
  }
}
"
`;

exports[`inline fragment field group > Query 5`] = `
"
{
  "___": {
    "__typename": true,
    "$include": true
  }
}
--------------
{
  ... @include(if: true) {
    __typename
  }
}
"
`;

exports[`other > Query 1`] = `
"
{
  "__typename": true
}
--------------
{
  __typename
}
"
`;

exports[`other > Query 2`] = `
"
{
  "string": true
}
--------------
{
  string
}
"
`;

exports[`other > Query 3`] = `
"
{
  "id": true,
  "string": false
}
--------------
{
  id
}
"
`;

exports[`other > Query 4`] = `
"
{
  "id": true
}
--------------
{
  id
}
"
`;

exports[`other > Query 5`] = `
"
{
  "object": {
    "id": true
  }
}
--------------
{
  object {
    id
  }
}
"
`;

exports[`other > Query 6`] = `
"
{
  "objectNested": {
    "object": {
      "string": true,
      "id": true,
      "int": false
    }
  }
}
--------------
{
  objectNested {
    object {
      string
      id
    }
  }
}
"
`;

exports[`other > Query 7`] = `
"
{
  "objectNested": {
    "object": {
      "string": true,
      "id": true,
      "int": {
        "$skip": true
      }
    }
  }
}
--------------
{
  objectNested {
    object {
      string
      id
      int @skip(if: true)
    }
  }
}
"
`;

exports[`union > Query 1`] = `
"
{
  "unionFooBar": {
    "__typename": true
  }
}
--------------
{
  unionFooBar {
    __typename
  }
}
"
`;

exports[`union > Query 2`] = `
"
{
  "unionFooBar": {
    "___on_Bar": {
      "int": true
    }
  }
}
--------------
{
  unionFooBar {
    ... on Bar {
      int
    }
  }
}
"
`;

exports[`union > Query 3`] = `
"
{
  "unionFooBar": {
    "___on_Bar": {
      "$skip": true,
      "int": true
    }
  }
}
--------------
{
  unionFooBar {
    ... on Bar @skip(if: true) {
      int
    }
  }
}
"
`;
